--- a/FlashCard-Ariel-main/FLASHCARD-Ariel/index.html
+++ b/FlashCard-Ariel-main/FLASHCARD-Ariel/index.html
@@ -23,9 +23,8 @@
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
     <script src="App.js"></script>
-    <script src="perguntas.js"></script>
+    <script src="imagens.js"></script>
 </body>
 </html>
